# dsa-prep

./: .gitignore  INTERVIEW_STUDY_GUIDE.md  PROGRESS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: BEHAVIORAL_INTERVIEW.md  CHEATSHEET.md  LEARNING_GUIDE.md  PATTERNS.md  RESOURCES.md  STUDY_PLAN.md  SYSTEM_DESIGN.md  TIME_COMPLEXITY.md
problems/: README.md
problems/advanced_patterns/heap/: 01_kth_largest_element_in_an_array.md  02_k_closest_points_to_origin.md  03_top_k_frequent_elements.md
problems/advanced_patterns/k_way_merge/: 01_merge_k_sorted_arrays.md
problems/advanced_patterns/matrix_traversal/: 01_number_of_islands.md  02_max_area_of_island.md
problems/advanced_patterns/merge_intervals/: 01_merge_intervals.md  02_insert_interval.md  03_meeting_rooms.md  problem_1_merge_intervals.md
problems/advanced_patterns/modified_binary_search/: 01_search_a_2d_matrix.md
problems/advanced_patterns/monotonic_stack/: 01_next_greater_element.md  02_daily_temperatures.md  (+1 more)
scripts/: check_coverage.sh  create_all_problems.sh  create_remaining_problems.py  generate_problems.py  run_tests.sh  setup.sh
src/dsa/: __init__.py
tests/: conftest.py
tests/test_advanced_patterns/: test_divide_conquer.py
tests/test_algorithms/: __init__.py  test_sorting.py
tests/test_core_patterns/: test_binary_search.py  test_dfs.py  test_greedy.py  test_two_pointer.py
tests/test_data_structures/: test_cache.py  test_linked_list.py  test_stack.py
tests/test_specialized_patterns/: test_graph_algorithms.py
(+100 files in other folders)
